# AI_FILE

./: .gitignore  6.pl  7.pl  README.md  pg10.py  pg11.py  pg12.py  pg13.py  pg14.py  pyproject.toml  training_data.txt
