[project]
name = "ai-file"
version = "0.1.0"
description = ""
authors = [
    {name = "abhay-byte",email = "abhay02delhi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
